# crm_shveya

./: .gitignore  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  todo.txt
app_accounting/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app_accounting/services/: user_salary.py
app_croi/: admin.py  apps.py  models.py
app_croi/migrations/: 0001_initial.py  0002_alter_croi_created_at.py
app_global/: admin.py  apps.py  models.py
app_history/migrations/: 0001_initial.py  0002_alter_adminhistorylog_options.py  0003_adminhistorylog_status.py
app_logistics/: admin.py  apps.py  models.py
app_logistics/migrations/: 0001_initial.py  0002_logistics_product.py
app_packaging/: admin.py  apps.py  models.py
app_packaging/migrations/: 0001_initial.py  0002_productprocess_confirmed.py  0003_alter_productprocess_options.py
app_productions/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
app_productions/migrations/: 0001_initial.py  0002_alter_product_category_alter_product_color_and_more.py  0002_alter_product_price.py  0002_initial.py  0003_alter_product_model_options_alter_size_options.py  0003_cargo_alter_product_price_alter_product_quentity.py
app_sklad/: apps.py  models.py
app_staffsalary/: apps.py  models.py
app_tailor/: admin.py  apps.py  models.py
app_tailor/migrations/: 0001_initial.py
app_users/: admin.py  apps.py  forms.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
app_utug/: admin.py  apps.py  models.py
config/: logger.py  settings.py  urls.py
(+28 files in other folders)
